// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContentCard editorial layout stories snapshot > Callout story renders and matches snapshot 1`] = `
<div
  class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border py-6 shadow-ui relative h-full overflow-hidden border-0 border-l-2 border-l-primary bg-secondary shadow-none ring-0"
  data-layout="callout"
  data-slot="card"
>
  <div
    class="p-0"
    data-slot="card-content"
  >
    <div
      class="flex flex-col px-6 py-5 md:px-8"
    >
      <div
        class="relative z-10"
      >
        <p
          class="mb-3 text-[0.6875rem] font-medium uppercase tracking-[0.18em] text-muted-foreground"
        >
          Please note
        </p>
        <div
          class="flex-1 flex flex-col gap-3"
        >
          <h3
            class="text-2xl font-semibold leading-[120%] tracking-[-0.6px] mb-0 text-foreground"
          >
            Demonstration store
          </h3>
          <p
            class="text-sm font-normal leading-5 mb-0 whitespace-pre-line text-muted-foreground"
          >
            This is a demo store only. Orders placed here will not be processed, charged, or shipped.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentCard editorial layout stories snapshot > Prose story renders and matches snapshot 1`] = `
<div
  class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border py-6 shadow-ui relative h-full overflow-hidden border-0 bg-transparent shadow-none ring-0"
  data-layout="prose"
  data-slot="card"
>
  <div
    class="p-0"
    data-slot="card-content"
  >
    <div
      class="flex flex-col max-w-prose px-0 py-2"
    >
      <div
        class="relative z-10"
      >
        <div
          class="flex-1 flex flex-col gap-3"
        >
          <h3
            class="text-2xl font-semibold leading-[120%] tracking-[-0.6px] mb-0 text-foreground"
          >
            What we collect
          </h3>
          <p
            class="text-sm font-normal leading-5 mb-0 whitespace-pre-line text-muted-foreground"
          >
            Account details, basket contents, and messages you send through the contact form. We do not sell client lists.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentCard editorial layout stories snapshot > Split story renders and matches snapshot 1`] = `
<div
  class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border py-6 shadow-ui relative h-full overflow-hidden ring-secondary/40 bg-muted/50"
  data-layout="split"
  data-slot="card"
>
  <div
    class="grid p-0 md:grid-cols-2 md:items-stretch"
    data-slot="card-content"
  >
    <div
      class="relative overflow-hidden bg-secondary/20 aspect-[4/3] md:aspect-auto md:min-h-full"
    >
      <img
        alt="Empty Geneva ateliers in north light."
        class="h-full w-full object-cover"
        loading="lazy"
        src="/__ASSET_MOCK__"
        style="object-position: 50% 50%;"
      />
    </div>
    <div
      class="flex flex-col justify-center p-6 md:p-10"
    >
      <div
        class="relative z-10"
      >
        <div
          class="flex-1 flex flex-col gap-3"
        >
          <h3
            class="text-2xl font-semibold leading-[120%] tracking-[-0.6px] mb-0 text-foreground"
          >
            How we sell
          </h3>
          <p
            class="text-sm font-normal leading-5 mb-0 whitespace-pre-line text-muted-foreground"
          >
            Timepieces under USD 3,000 may be added to a basket. At USD 3,000 and above we reserve the appointment for a boutique.
          </p>
        </div>
        <a
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-fit text-sm font-medium leading-5 text-primary-foreground mt-4"
          data-size="default"
          data-slot="button"
          data-variant="default"
          href="/boutiques"
        >
          Find a boutique
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentCard editorial layout stories snapshot > Stack story renders and matches snapshot 1`] = `
<div
  class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border py-6 shadow-ui relative h-full overflow-hidden ring-secondary/40 bg-muted/50"
  data-layout="stack"
  data-slot="card"
>
  <div
    class="p-0"
    data-slot="card-content"
  >
    <div
      class="relative overflow-hidden bg-secondary/20 aspect-[16/9]"
    >
      <img
        alt="Empty Geneva ateliers in north light."
        class="h-full w-full object-cover"
        loading="lazy"
        src="/__ASSET_MOCK__"
        style="object-position: 50% 50%;"
      />
    </div>
    <div
      class="flex flex-col p-6 md:p-8"
    >
      <div
        class="relative z-10"
      >
        <div
          class="flex-1 flex flex-col gap-3"
        >
          <h3
            class="text-2xl font-semibold leading-[120%] tracking-[-0.6px] mb-0 text-foreground"
          >
            Drop off at a boutique
          </h3>
          <p
            class="text-sm font-normal leading-5 mb-0 whitespace-pre-line text-muted-foreground"
          >
            Geneva, London, New York, Paris, and Tokyo accept pieces for servicing.
          </p>
        </div>
        <a
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-fit text-sm font-medium leading-5 text-primary-foreground mt-4"
          data-size="default"
          data-slot="button"
          data-variant="default"
          href="/boutiques"
        >
          Find a boutique
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentCard editorial layout stories snapshot > Tile story renders and matches snapshot 1`] = `
<div
  class="text-card-foreground flex flex-col gap-6 rounded-ui border-ui border-border py-6 shadow-ui relative h-full overflow-hidden ring-secondary/40 bg-card"
  data-layout="tile"
  data-slot="card"
>
  <div
    class="p-0"
    data-slot="card-content"
  >
    <div
      class="flex flex-col justify-start p-6 md:p-8"
    >
      <div
        class="relative z-10"
      >
        <p
          class="mb-3 text-[0.6875rem] font-medium uppercase tracking-[0.18em] text-muted-foreground"
        >
          01
        </p>
        <div
          class="flex-1 flex flex-col gap-3"
        >
          <h3
            class="text-2xl font-semibold leading-[120%] tracking-[-0.6px] mb-0 text-foreground"
          >
            Consent banner
          </h3>
          <p
            class="text-sm font-normal leading-5 mb-0 whitespace-pre-line text-muted-foreground"
          >
            The banner records whether you accept optional analytics.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
